membuat middleware
