# main.go
@@ -7,6 +7,7 @@ import (
 	"github.com/gorilla/mux"
 	"github.com/ihksanghazi/go-auth-jwt/controllers/authcontroller"
 	"github.com/ihksanghazi/go-auth-jwt/controllers/productcontroller"
+	"github.com/ihksanghazi/go-auth-jwt/middlewares"
 	"github.com/ihksanghazi/go-auth-jwt/models"
 )
 
@@ -19,7 +20,9 @@ func main() {
 	r.HandleFunc("/register",authcontroller.Register).Methods("POST")
 	r.HandleFunc("/logout",authcontroller.Logout).Methods("GET")
 	
-	r.HandleFunc("/api/products",productcontroller.Index).Methods("GET")
+	api:=r.PathPrefix("/api").Subrouter()
+	api.HandleFunc("/products",productcontroller.Index).Methods("GET")
+	api.Use(middlewares.JWTMiddleware)
 
 	log.Fatal(http.ListenAndServe(":5000", r))
 }
